# pos2key

./: .gitignore  Android_Debug_Bridge.py  README.md  classes.py  complex_quant_script.py  debug.py  eslint.config.js  keyboard_test.py  main.py  package-lock.json  package.json  pyproject.toml  test.py  vite.config.js
.github/workflows/: build_app.yml  build_app_copy_dist.yml  copy_dist.yml
flask/: app.py
flask/vue_dist/: index.html
flask/vue_dist/assets/: index-B89bGJkL.js  index-BI8ShYcn.css  index-BeZibbEs.js  index-BkPLb5zB.css  index-C1BLA3r7.css  index-CakPt4Qg.css  index-CnPAuEBW.js  index-D1Ul3AAa.css  index-DAHyjA5a.js  index-DO2dD0rj.js  index-XWgJ6cwy.js  index-rF5bcbrh.css
src/: App.vue
src/components/: Camera.vue  SubwaySurfers.vue
src/pos2key/: adb.py  classes.py  config.py  subway_surfers_interface.py  tracking.py
test/: full-test.py  tracking-test-modular.py  tracking-test-old.py  tracking-test.py
test/ADB/: keyboard_test.py  manual_test.py
test/model/: tracking-test-modular.py  tracking-test.py
