[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pos2key"
version = "0.0.1"
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "build>=1.3.0",
    "flask>=3.1.2",
    "keyboard>=0.13.5",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "requests",
    "torch",
    "torchvision",
    "transformers>=4.57.1",
    "ultralytics>=8.3.221",
]

[project.urls]
Homepage = "https://github.com/mysticshirou/pos2key"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
